<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uncc.triviaapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/tvWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="72dp"
        android:id="@+id/imgTrivia"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="22dp"
        android:id="@+id/btnExit"
        android:textColor="@android:color/background_light"
        tools:background="@color/colorPrimary" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="46dp"
        android:layout_marginEnd="46dp"
        android:id="@+id/btnStart"
        android:layout_alignBaseline="@+id/btnExit"
        android:layout_alignBottom="@+id/btnExit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/background_light" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/tvLoading"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/loading_trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoading"
        android:layout_alignTop="@+id/imgTrivia"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
