<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uncc.triviaapp.TriviaActivity">

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvQuestionNumbe"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvQuestionNumbe"
        android:layout_toEndOf="@+id/tvQuestionNumbe"
        android:layout_marginLeft="115dp"
        android:layout_marginStart="115dp"
        android:id="@+id/tvTimeLeft" />

    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPrevious"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tvQuestionNumbe"
        android:layout_toEndOf="@+id/tvQuestionNumbe" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tvTimeLeft"
        android:layout_alignStart="@+id/tvTimeLeft"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/svQuestion"
        android:layout_below="@+id/imgQuestion"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/svLinerQuestion" />
    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tvQuestionNumbe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/imgQuestion" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbImageLoad"
        android:layout_above="@+id/svQuestion"
        android:layout_toRightOf="@+id/btnPrevious"
        android:layout_toEndOf="@+id/btnPrevious"
        android:layout_marginBottom="68dp" />

    <TextView
        android:text="@string/loading_trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/tvLoading"
        android:layout_alignTop="@+id/imgQuestion"
        android:layout_alignRight="@+id/tvTimeLeft"
        android:layout_alignEnd="@+id/tvTimeLeft"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp" />
</RelativeLayout>
